# torchgeo

./: .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CITATION.cff  README.md  adam_prediction.py  ag-10-train-9495118.out  ag-20-train-9495120.out  ag-50-train-9495122.out  ag-80-train-9495127.out  agri-imagenet-3284611.out  agri-imagenet-3351922.out  agrifieldnet.sh  cdl-A100-3116454.out  cdl-A100-3264255.out  cdl-A100-3265890.out  cdl-A100-3265908.out  cdl-A100-single-3116991.out  cdl.sh  cdl_best.sh  cdl_multigpus.sh  cdl_test_s2-10468965.out  cdls2-10513884.out  cdls2-10513890.out  cdlsentinel2-10498303.out  cdlsentinel2-10498360.out  cdlsentinel2-10498368.out  cdlsentinel2-10498373.out  cdlsentinel2-10498384.out  cdlsentinel2-10498389.out  class_remap_tables.tex  config.yaml  create_ckpt.py  create_prediction.py  create_weights.sh  download_s2.sh  download_sact.py  hubconf.py  implementation-notes.html  india-fields-9028629.out  (+75 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  GOVERNANCE.md  MAINTAINERS.md  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/workflows/: deploy.yaml  labeler.yml  release.yaml  style.yaml  tests.yaml  tutorials.yaml
bash_outs/: l7-res18-imagenet-8969811.out  l7-res18-imagenet-8973106.out  l7-res18-imagenet-8973116.out  l7-res18-imagenet-8973118.out  l8-50-imagenet-8977157.out  l8-res18-imagenet-8974281.out  moco-etmsr-cdl-resnet18-8969045.out  moco-etmsr-cdl-resnet50-8969008.out  moco-etmsr-cdl-resnet50-8969017.out  moco-l8-50-8977162.out  moco-olisr-cdl-resnet18-8969109.out  moco-olitirstoa-cdl-resnet18-8971068.out  simclr-etmsr-cdl-resnet18-8971035.out  simclr-olisr-cdl-resnet18-8971049.out  simclr-olitirstoa-cdl-resnet18-8971072.out  tm-toa-50-cdl-magenet-8974218.out
conf/: agrifieldnet.yaml  india_fields.yaml  l7irish.yaml  l8biome.yaml  ssl4eo_benchmark_etm_sr_cdl.yaml  ssl4eo_benchmark_oli_sr_cdl.yaml  ssl4eo_benchmark_oli_tirs_toa_cdl.yaml  ssl4eo_benchmark_tm_toa_cdl.yaml
docs/: conf.py  index.rst
docs/_static/: custom.css  switcher.json
docs/api/: datamodules.rst  datasets.rst  index.rst  models.rst  samplers.rst  trainers.rst
docs/tutorials/: basic_usage.rst  case_studies.rst  change_detection.ipynb  cli.ipynb  conftest.py  contribute_non_geo_dataset.ipynb  crop_type_mapping.ipynb  custom_raster_dataset.ipynb  custom_segmentation_trainer.ipynb  earth_surface_water.ipynb  earthquake_detection.ipynb  embeddings.ipynb  geospatial.ipynb  index.rst  indices.ipynb  naip_road_segmentation.ipynb  pretrained_embeddings.ipynb  pretrained_weights.ipynb  pytorch.ipynb  spatiotemporal_segmentation.ipynb  spatiotemporal_segmentation_convlstm.ipynb  torchgeo.ipynb  trainers.ipynb  transforms.ipynb
docs/user/: alternatives.rst  changelog.rst  contributing.rst  glossary.rst  index.rst  installation.rst
experiments/agrifieldnet/: agrfieldnet-ResNet50-imagenet-unfreeze-lr1e-3.yaml  agrifieldnet_resnet50_imagenet_frozen.yaml  agrifieldnet_resnet50_satlas_frozen.yaml  agrifieldnet_resnet50_satlas_unfreeze.yaml  agrifieldnet_resnet50_ssl4eo_frozen.yaml  agrifieldnet_resnet50_ssl4eo_unfreeze.yaml
experiments/cdl/: sentinel2_cdl_resnet50_imagenet_frozen.yaml  sentinel2_cdl_resnet50_imagenet_unfreeze.yaml  sentinel2_cdl_resnet50_satlas_frozen.yaml  sentinel2_cdl_resnet50_satlas_unfreeze.yaml  sentinel2_cdl_resnet50_ssl4eo_frozen.yaml  sentinel2_cdl_resnet50_ssl4eo_frozen_100ID.yaml  sentinel2_cdl_resnet50_ssl4eo_frozen_10ID.yaml  sentinel2_cdl_resnet50_ssl4eo_unfreeze.yaml
experiments/eurocrops/: README.md  eurocrops_harmonize.py  find_good_images.py  rasterize.py  satlaspretrain_code.py  sentinel2_eurocrops_resnet50_imagenet.yaml  sentinel2_eurocrops_resnet50_imagenet_rasterized.yaml  sentinel2_eurocrops_resnet50_imagenet_rasterized_frozen.yaml  sentinel2_eurocrops_resnet50_imagenet_rasterized_unfreeze.yaml  sentinel2_eurocrops_resnet50_satlas_rasterized.yaml  sentinel2_eurocrops_resnet50_satlas_rasterized_frozen.yaml  sentinel2_eurocrops_resnet50_satlas_rasterized_unfreeze.yaml  sentinel2_eurocrops_resnet50_ssl4eo_rasterized.yaml  sentinel2_eurocrops_resnet50_ssl4eo_rasterized_frozen.yaml  sentinel2_eurocrops_resnet50_ssl4eo_rasterized_frozen_100ID.yaml  sentinel2_eurocrops_resnet50_ssl4eo_rasterized_frozen_10ID.yaml  sentinel2_eurocrops_resnet50_ssl4eo_rasterized_unfreeze.yaml  speedcheck.py
experiments/fewshot/: agrifieldnet_0_ood_ssl4eo.yaml  agrifieldnet_100_ood_ssl4eo.yaml  agrifieldnet_10_ood_ssl4eo.yaml  cdl_0_ood_ssl4eo.yaml  cdl_100_ood_ssl4eo.yaml  cdl_10_ood_ssl4eo.yaml  cdl_900_ood_ssl4eo.yaml  eurocrops_0_ood_ssl4eo.yaml  eurocrops_100_ood_ssl4eo.yaml  eurocrops_10_ood_ssl4eo.yaml  eurocrops_900_ood_ssl4eo.yaml  global_imagenet_10.yaml  global_imagenet_100.yaml  global_imagenet_1k.yaml  (+30 more)
outputs_germany/: metrics.txt
requirements/: README.md  datasets.txt  docs.txt  min-reqs.old  models.txt  required.txt  style.txt  tests.txt
scripts/: cdl_fewshot.sh  cdl_fewshot_test.sh  cdl_ssl4eo_ID.sh  cdl_ssl4eo_ID_test.sh  eurocrops_fewshot.sh  eurocrops_fewshot_900_ood.sh  eurocrops_fewshot_900_ood_test.sh  eurocrops_fewshot_test.sh  eurocrops_ssl4eo_ID.sh  eurocrops_ssl4eo_ID_test.sh  id_test.sh  nccm_fewshot.sh  nccm_fewshot_test.sh  nccm_ssl4eo_ID.sh  nccm_ssl4eo_ID_test.sh  ood.sh  ood_test.sh  pixel_cdl_imagenet.sh  pixel_cdl_satlas.sh  pixel_cdl_ssl4eo.sh  pixel_eurocrops_imagenet.sh  pixel_eurocrops_satlas.sh  pixel_eurocrops_ssl4eo.sh  pixel_nccm_imagenet.sh  pixel_nccm_satlas.sh  pixel_nccm_ssl4eo.sh  pixel_sact_imagenet.sh  pixel_sact_satlas.sh  pixel_sact_ssl4eo.sh  pixel_sas_imagenet.sh  pixel_sas_satlas.sh  pixel_sas_ssl4eo.sh  sact_fewshot.sh  sact_fewshot_test.sh  sact_ssl4eo_ID.sh  sact_ssl4eo_ID_test.sh  sas_fewshot.sh  sas_fewshot_test.sh  sas_ssl4eo_ID.sh  sas_ssl4eo_ID_test.sh
submission/: agrifieldnet_unet_resnet50_0.0001_ce_False_0.001_0.1_0_submission.csv  train_agrifieldnet_unet_resnet50_0.0001_ce_False_0.001_0.1_0_submission.csv
tests/: test_requirements.py
torchgeo/: __init__.py
wandb/: latest-run
(+1549 files in other folders)
